[gd_scene load_steps=9 format=3 uid="uid://jiexpvkmj5yq"]

[ext_resource type="Script" uid="uid://p1cxo5j1663b" path="res://Scripts/main.gd" id="1_jjvhh"]
[ext_resource type="PackedScene" uid="uid://qjq33xvfin8d" path="res://Scenes/elevator.tscn" id="2_kry3j"]
[ext_resource type="PackedScene" uid="uid://ctfp4fsubafgk" path="res://Scenes/building.tscn" id="3_21xkr"]
[ext_resource type="AudioStream" uid="uid://cakctl4m1gn4a" path="res://Sounds/People/crowd_noise.mp3" id="4_6bp64"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_dxppu"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_gy3sr"]
sky_material = SubResource("ProceduralSkyMaterial_dxppu")

[sub_resource type="Environment" id="Environment_1lwx6"]
background_mode = 2
sky = SubResource("Sky_gy3sr")
tonemap_mode = 4
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_dsnr4"]
size = Vector3(41.0915, 0.260193, 32.2747)

[node name="Main" type="Node3D"]
script = ExtResource("1_jjvhh")
min_spawn_time = 0.5
max_spawn_time = 0.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1lwx6")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.321394, -0.383022, 0, -0.766045, 0.642787, -0.5, 0.55667, 0.663414, 0, 0, 0)
shadow_enabled = true

[node name="Elevator" parent="." instance=ExtResource("2_kry3j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16, 10)

[node name="Building" parent="." instance=ExtResource("3_21xkr")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreText" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_right = 142.0
offset_bottom = 47.0
text = "Moneys: $$$$"

[node name="KillZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.765846, 0.14329, -0.3302)
shape = SubResource("BoxShape3D_dsnr4")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[node name="CrowdNoise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_6bp64")
volume_db = -10.0
autoplay = true

[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
